build/log/idf_py_stdout_output_11540
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Code\ESPIDF\Do_An_2_Ble_Mesh\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Code/ESPIDF/Do_An_2_Ble_Mesh/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/ble_mesh_network/CMakeFiles/__idf_ble_mesh_network.dir/ble_mesh_network.c.obj
FAILED: esp-idf/ble_mesh_network/CMakeFiles/__idf_ble_mesh_network.dir/ble_mesh_network.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Code/ESPIDF/Do_An_2_Ble_Mesh/build/config -ID:/Code/ESPIDF/Do_An_2_Ble_Mesh/ble_mesh_network/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32/register -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/include/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/osi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/api/include/api -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/btc/profile/esp/blufi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/btc/profile/esp/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/hci_log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/ble_log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/host/bluedroid/api/include/api -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/common/tinycrypt/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/core -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/core/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/core/storage -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/btc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/models/common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/models/client/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/models/server/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/api/core/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/api/models/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/api -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/lib/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/v1.1/api/core/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/v1.1/api/models/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/esp_ble_mesh/v1.1/btc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/tinycrypt/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/bt/common/tinycrypt/port -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Code/ESPIDF/Do_An_2_Ble_Mesh=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ble_mesh_network/CMakeFiles/__idf_ble_mesh_network.dir/ble_mesh_network.c.obj -MF esp-idf\ble_mesh_network\CMakeFiles\__idf_ble_mesh_network.dir\ble_mesh_network.c.obj.d -o esp-idf/ble_mesh_network/CMakeFiles/__idf_ble_mesh_network.dir/ble_mesh_network.c.obj -c D:/Code/ESPIDF/Do_An_2_Ble_Mesh/ble_mesh_network/ble_mesh_network.c
D:/Code/ESPIDF/Do_An_2_Ble_Mesh/ble_mesh_network/ble_mesh_network.c: In function 'ble_mesh_network_init':
D:/Code/ESPIDF/Do_An_2_Ble_Mesh/ble_mesh_network/ble_mesh_network.c:107:11: error: implicit declaration of function 'esp_ble_mesh_register_model_callback'; did you mean 'esp_ble_mesh_register_prov_callback'? [-Wimplicit-function-declaration]
  107 |     err = esp_ble_mesh_register_model_callback(model_callback);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |           esp_ble_mesh_register_prov_callback
ninja: build stopped: subcommand failed.
